# sls-resizer

./: .gitignore  Cargo.toml  package.json  serverless.yml
cropper/: Cargo.toml
cropper/src/: main.rs
dynamodb_service/: Cargo.toml
dynamodb_service/src/: lib.rs
initiator/: Cargo.toml
initiator/src/: main.rs
resizer/: Cargo.toml
resizer/src/: main.rs
s3_service/: Cargo.toml
s3_service/src/: lib.rs
saver/: Cargo.toml
saver/src/: main.rs
src/: main.rs
thumb_saver/: Cargo.toml
thumb_saver/src/: main.rs
