[package]
name = "cropper"
version = "0.1.0"
authors = ["Kanji Tanaka <sumireminami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
simple_logger = "1.6.0"
failure = "0.1.8"
image = "0.23"
s3_service = { path = "../s3_service" }
