[package]
name = "dynamodb_service"
version = "0.1.0"
authors = ["Kanji Tanaka <sumireminami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.44"
rusoto_dynamodb = "0.44"
tokio = "0.2"
futures = "0.3"
failure = "0.1.8"
