[package]
name = "s3_service"
version = "0.1.0"
authors = ["Kanji Tanaka <sumireminami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.44"
rusoto_s3 = "0.44"
tokio = "0.2"
futures = "0.3"
failure = "0.1.8"
serde = "1.0.114"
serde_derive = "1.0.114"
