[package]
name = "saver"
version = "0.1.0"
authors = ["Kanji Tanaka <sumireminami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
simple_logger = "1.6.0"
failure = "0.1.8"
serde = "1.0.114"
serde_derive = "1.0.114"
