[package]
name = "thumb_saver"
version = "0.1.0"
authors = ["Kanji Tanaka <sumireminami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
simple_logger = "1.6.0"
aws_lambda_events = "0.3.0"
simple-error = "0.2.1"
failure = "0.1.8"
dynamodb_service = { path = "../dynamodb_service" }
